--- a/designpro/templates/registration/login.html
+++ b/designpro/templates/registration/login.html
@@ -3,10 +3,10 @@
 {% block content %}
 <div class="login-container">
   <div class="login-header">
-    <h2>Daily UI</h2>
+    <h2>Design PRO</h2>
     <div class="login-links">
-      <a href="#">Login</a>
-      <a href="#">Sign up</a>
+      <p>Do not have an account?</p>
+      <a href="{% url 'signup' %}">Sign up</a>
     </div>
   </div>
 
@@ -14,21 +14,17 @@
     {% csrf_token %}
 
     <div class="input-group">
-      <label for="{{ form.username.id_for_label }}">
-        <i class="fas fa-envelope"></i> 
-      </label>
+      <label for="{{ form.username.id_for_label }}">Username</label>
       {{ form.username }}
     </div>
 
     <div class="input-group">
-      <label for="{{ form.password.id_for_label }}">
-        <i class="fas fa-lock"></i> 
-      </label>
+      <label for="{{ form.password.id_for_label }}">Password</label>
       {{ form.password }}
     </div>
 
     <button type="submit" class="login-button">
-      Enter <i class="fas fa-arrow-right"></i>
+      Enter
     </button>
 
     {% if form.errors %}
@@ -46,7 +42,7 @@
   </form>
 
   <div class="login-footer">
-    <p>Made by the dudes behind Noon Pacific.<br>Inspired by Paul Nechita.</p>
+    <p>Turning your thoughts into reality</p>
   </div>
 </div>
 {% endblock content %}
