--- a/designpro/templates/signup.html
+++ b/designpro/templates/signup.html
@@ -3,7 +3,7 @@
 {% block content %}
 <div class="login-container">
   <div class="login-header">
-    <h2>Daily UI</h2>
+    <h2>Design PRO</h2>
     <div class="login-links">
       <p>Already have an account?</p>
       <a href="{% url 'login' %}">Login</a> 
