--- a/templates/signup.html
+++ b/templates/signup.html
@@ -6,7 +6,7 @@
     <h2>Design PRO</h2>
     <div class="login-links">
       <p>Already have an account?</p>
-      <a href="{% url 'login' %}">Login</a> 
+      <a href="{% url 'login' %}">Login</a>
     </div>
   </div>
 
@@ -14,24 +14,38 @@
     {% csrf_token %}
 
     {% if form.non_field_errors %}
-        <div class="error-message">
-            {% for error in form.non_field_errors %}
-                <p>{{ error }}</p>
-            {% endfor %}
-        </div>
+    <div class="error-message">
+      {% for error in form.non_field_errors %}
+      <p>{{ error }}</p>
+      {% endfor %}
+    </div>
     {% endif %}
 
-    
+
     <div class="input-group">
-      <label for="{{ form.username.id_for_label }}" title="Username" >Username</label>
+      <label for="{{ form.full_name.id_for_label}}">Полное ФИО</label>
+      {{ form.full_name}}
+    </div>
+    {% if form.full_name.errors %}
+    <div class="error-message">
+      {% for error in form.full_name.errors %}
+      <p>{{ error }}</p>
+      {% endfor %}
+    </div>
+    {% endif %}
+
+  
+
+    <div class="input-group">
+      <label for="{{ form.username.id_for_label }}" title="Username">Логин</label>
       {{ form.username }}
     </div>
     {% if form.username.errors %}
-        <div class="error-message">
-            {% for error in form.username.errors %}
-                <p>{{ error }}</p>
-            {% endfor %}
-        </div>
+    <div class="error-message">
+      {% for error in form.username.errors %}
+      <p>{{ error }}</p>
+      {% endfor %}
+    </div>
     {% endif %}
 
     <div class="input-group">
@@ -39,47 +53,47 @@
       {{ form.email }}
     </div>
     {% if form.email.errors %}
-        <div class="error-message">
-            {% for error in form.email.errors %}
-                <p>{{ error }}</p>
-            {% endfor %}
-        </div>
+    <div class="error-message">
+      {% for error in form.email.errors %}
+      <p>{{ error }}</p>
+      {% endfor %}
+    </div>
     {% endif %}
 
     <div class="input-group">
-      <label for="{{ form.phone_number.id_for_label }}">Phone number</label>
+      <label for="{{ form.phone_number.id_for_label }}">Номер телефона</label>
       {{ form.phone_number }}
     </div>
     {% if form.phone_number.errors %}
-        <div class="error-message">
-            {% for error in form.phone_number.errors %}
-                <p>{{ error }}</p>
-            {% endfor %}
-        </div>
+    <div class="error-message">
+      {% for error in form.phone_number.errors %}
+      <p>{{ error }}</p>
+      {% endfor %}
+    </div>
     {% endif %}
 
     <div class="input-group">
-      <label for="{{ form.password1.id_for_label }}">Password</label>
+      <label for="{{ form.password1.id_for_label }}">Пароль</label>
       {{ form.password1 }}
     </div>
     {% if form.password1.errors %}
-        <div class="error-message">
-            {% for error in form.password1.errors %}
-                <p>{{ error }}</p>
-            {% endfor %}
-        </div>
+    <div class="error-message">
+      {% for error in form.password1.errors %}
+      <p>{{ error }}</p>
+      {% endfor %}
+    </div>
     {% endif %}
 
     <div class="input-group">
-      <label for="{{ form.password2.id_for_label }}">Repeat password</label>
+      <label for="{{ form.password2.id_for_label }}">Повторите пароль</label>
       {{ form.password2 }}
     </div>
     {% if form.password2.errors %}
-        <div class="error-message">
-            {% for error in form.password2.errors %}
-                <p>{{ error }}</p>
-            {% endfor %}
-        </div>
+    <div class="error-message">
+      {% for error in form.password2.errors %}
+      <p>{{ error }}</p>
+      {% endfor %}
+    </div>
     {% endif %}
 
     <button type="submit" class="login-button">
