--- a/studios/templates/base_generic.html
+++ b/studios/templates/base_generic.html
@@ -20,7 +20,7 @@
         </div>
         {% if user.is_authenticated %}
         <div class="nav-right">
-          <a href="{% url 'new-order' %}">+ New Order</a>
+          <a href="{% url 'create_application' %}">+ New Order</a>
         </div>
         
         
