--- a/templates/signup.html
+++ b/templates/signup.html
@@ -5,8 +5,8 @@
   <div class="login-header">
     <h2>Design PRO</h2>
     <div class="login-links">
-      <p>Already have an account?</p>
-      <a href="{% url 'login' %}">Login</a>
+      <p>Уже есть аккаунт?</p>
+      <a href="{% url 'login' %}">Войти</a>
     </div>
   </div>
 
