--- a/studios/static/css/styles.css
+++ b/studios/static/css/styles.css
@@ -159,13 +159,13 @@
     font-size: 14px;
 }
 
-.login-footer {
+/* .login-footer {
     margin-top: 30px;
     text-align: center;
     color: #fff;
     font-size: 12px;
     opacity: 0.8;
-}
+} */
 
 .login-footer p {
     margin: 0;
